# ortidy

./: .claudeignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
binder/: requirements.txt
docs/: accessor.md  api.md  conf.py  examples.md  getting-started.md  index.md  index.rst  result-shapes.md  solvers.md
docs/api/: assignment-matrix.rst  edge-flow.rst  interval-schedule.rst  result.rst
docs/concepts/: result-shapes.md
docs/guide/: assignment-matrix.md  assignment-packing.md  edge-flow.md  network-flow-routing.md  scheduling.md
examples/: assignment_and_flow.ipynb  binning.ipynb  scheduling.ipynb  travelling_salesperson.ipynb  vehicle_routing.ipynb
ortidy/: __init__.py  _narwhals.py  _scaling.py  accessor.py  result.py  schema.py
ortidy/assignment/: __init__.py  assignment.py  generalized_assignment.py
ortidy/binning/: __init__.py  bin_packing.py  knapsack.py  multi_knapsack.py
ortidy/blending/: __init__.py  blend.py
ortidy/covering/: __init__.py  set_cover.py
ortidy/data/: __init__.py
ortidy/facility/: __init__.py  facility_location.py
ortidy/flow/: __init__.py  flow.py
ortidy/routing/: __init__.py  distance.py  routing.py
ortidy/scheduling/: __init__.py  job_shop.py  shift_scheduling.py
ortidy/transportation/: __init__.py  transportation.py
packaging/pandas-or-shim/: README.md  pyproject.toml
packaging/pandas-or-shim/pandas_or/: __init__.py
tests/: conftest.py  test_accessor.py  test_assignment.py  test_bin_packing.py  test_blend.py  test_distance.py  test_facility.py  test_flow.py  test_generalized_assignment.py  test_job_shop.py  test_knapsack.py  test_multi_knapsack.py  test_result.py  test_routing.py  test_routing_extensions.py  test_scaling.py  test_scheduling.py  test_set_cover.py  test_transportation.py  test_validation.py
