[project]
name = "ortidy"
version = "0.3.0"
description = "Operations research on tidy dataframes — a backend-agnostic dataframe façade over Google OR-Tools."
authors = [{ name = "Lucas Jamar" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["operations-research", "optimization", "ortools", "dataframe", "narwhals"]
dependencies = [
    "narwhals>=1.0",
    "ortools>=9.12",
    "pandera>=0.20",
]

[project.urls]
Homepage = "https://github.com/lucasjamar/ortidy"
Repository = "https://github.com/lucasjamar/ortidy"

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "numpy>=1.24",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
examples = [
    "plotly>=5.0",
    "jupyterlab>=4.0",
    "nbconvert>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ortidy"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py310"
line-length = 88
# Example notebooks are illustrative and not held to the library's lint rules.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

# numpy and sphinx ship sources/stubs using 3.12-only `type` statements that mypy
# cannot parse under our 3.10 target; neither is part of ortidy's typed surface, so
# skip following them. (sphinx is only present when the docs group is installed.)
[[tool.mypy.overrides]]
module = ["numpy.*", "sphinx.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
