[project]
name = "pandas-or"
version = "0.1.4"
description = "Deprecated — pandas-or has been renamed to `ortidy`. Installing this package installs ortidy."
authors = [{ name = "Lucas Jamar" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ortidy>=0.2.0"]

[project.urls]
Homepage = "https://github.com/lucasjamar/ortidy"
Repository = "https://github.com/lucasjamar/ortidy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pandas_or"]
